--- a/ProyectoCerveza/src/Registro/RegistroCerveza.form
+++ b/ProyectoCerveza/src/Registro/RegistroCerveza.form
@@ -19,6 +19,11 @@
   </Layout>
   <SubComponents>
     <Component class="javax.swing.JTextField" name="TF_Descripcion">
+      <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="94" green="d9" red="d9" type="rgb"/>
+        </Property>
+      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="TF_DescripcionActionPerformed"/>
       </Events>
@@ -219,6 +224,11 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="TF_Descripcion1">
+      <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="94" green="d9" red="d9" type="rgb"/>
+        </Property>
+      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="TF_Descripcion1ActionPerformed"/>
       </Events>
@@ -249,6 +259,11 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="TF_Descripcion2">
+      <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="94" green="d9" red="d9" type="rgb"/>
+        </Property>
+      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="TF_Descripcion2ActionPerformed"/>
       </Events>
@@ -370,6 +385,11 @@
       </Constraints>
     </Component>
     <Component class="javax.swing.JTextField" name="TF_Descripcion3">
+      <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="94" green="d9" red="d9" type="rgb"/>
+        </Property>
+      </Properties>
       <Events>
         <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="TF_Descripcion3ActionPerformed"/>
       </Events>
