--- a/ProyectoCerveza/src/Registro/RegistroCuerpo2.form
+++ b/ProyectoCerveza/src/Registro/RegistroCuerpo2.form
@@ -202,7 +202,7 @@
                 </Constraint>
               </Constraints>
             </Component>
-            <Component class="javax.swing.JTextField" name="jTextField6">
+            <Component class="javax.swing.JTextField" name="TF_Nuevo">
               <Properties>
                 <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="94" green="d9" red="d9" type="rgb"/>
