--- a/ProyectoCerveza/src/Consultas/ConsultaLugar.form
+++ b/ProyectoCerveza/src/Consultas/ConsultaLugar.form
@@ -36,6 +36,12 @@
     </Component>
     <Component class="javax.swing.JButton" name="BT_Buscar">
       <Properties>
+        <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="66" green="66" red="66" type="rgb"/>
+        </Property>
+        <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
+          <Color blue="ff" green="ff" red="ff" type="rgb"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Buscar"/>
       </Properties>
       <Events>
@@ -142,7 +148,7 @@
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="-20" y="-40" width="840" height="590"/>
+          <AbsoluteConstraints x="0" y="-30" width="840" height="590"/>
         </Constraint>
       </Constraints>
     </Component>
