--- a/ProyectoCerveza/src/Registro/RegistroFamilia2.form
+++ b/ProyectoCerveza/src/Registro/RegistroFamilia2.form
@@ -60,9 +60,12 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Agregar"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton4ActionPerformed"/>
+              </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="160" y="360" width="120" height="50"/>
+                  <AbsoluteConstraints x="160" y="280" width="120" height="50"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -75,7 +78,7 @@
               </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="330" y="360" width="130" height="50"/>
+                  <AbsoluteConstraints x="340" y="280" width="130" height="50"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -88,7 +91,7 @@
               </Events>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="510" y="360" width="130" height="50"/>
+                  <AbsoluteConstraints x="520" y="280" width="130" height="50"/>
                 </Constraint>
               </Constraints>
             </Component>
